force-app/main/default/objects/b3o__Logic_Melon_Integration__c/b3o__Logic_Melon_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Logic Melon Integration</label>
</CustomObject>