force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__API_Key__c.field-meta.xml
<CustomField>
    <fullName>b3o__API_Key__c</fullName>
    <label>API: Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>