force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__POSTING_New_Ad_Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__POSTING_New_Ad_Status__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <inlineHelpText>Adverts by default are marked as Created (0). The may also be marked as ToAuthorise (16) or Deleted (1). Set the correct desired behaviour.</inlineHelpText>
    <label>POSTING: New Ad Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>