force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__POSTING_Specific_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>b3o__POSTING_Specific_Contact_Email__c</fullName>
    <label>POSTING: Specific Contact Email</label>
    <type>Email</type>
</CustomField>