force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__POSTING_Specific_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__POSTING_Specific_Contact_Name__c</fullName>
    <inlineHelpText>Optionally a specific contact name (default to use the user the vacancy is stored under)</inlineHelpText>
    <label>POSTING: Specific Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>