force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__Sandbox_Testing__c.field-meta.xml
<CustomField>
    <fullName>b3o__Sandbox_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the integration will use Logic Melon&apos;s Sandbox instead of the live instance.</inlineHelpText>
    <label>Sandbox Testing</label>
    <type>Checkbox</type>
</CustomField>