force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__Sync_Days_Back__c.field-meta.xml
<CustomField>
    <fullName>b3o__Sync_Days_Back__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Sync: Days Back</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>