force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__URL_Demo__c.field-meta.xml
<CustomField>
    <fullName>b3o__URL_Demo__c</fullName>
    <defaultValue>&quot;http://demo.api.logicmelon.co.uk/SOAP/Multiposter.asmx&quot;</defaultValue>
    <label>URL: Demo</label>
    <type>Url</type>
</CustomField>