force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__URL_Live__c.field-meta.xml
<CustomField>
    <fullName>b3o__URL_Live__c</fullName>
    <defaultValue>&quot;http://api.logicmelon.co.uk/SOAP/Multiposter.asmx&quot;</defaultValue>
    <label>URL: Live</label>
    <type>Url</type>
</CustomField>