force-app/main/default/objects/b3o__Logic_Melon_Integration__c/fields/b3o__User_Username__c.field-meta.xml
<CustomField>
    <fullName>b3o__User_Username__c</fullName>
    <label>User: Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>